--- a/colorful.css
+++ b/colorful.css
@@ -59,6 +59,10 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: Courier New, Courier, monospace;
